fix missing bootstrap containers to prevent x-overflow

--- a/CaSSAndRA/src/assets/style.css
+++ b/CaSSAndRA/src/assets/style.css
@@ -49,6 +49,12 @@
   margin-left: 10px;
 }
 
+
+/* fix width of hidden input element to prevent overflow in x direction (scrollbar) */
+#upload-sunray-file input {
+  width: 100%;
+}
+
 /* montserrat-regular - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
